[workspace]
members = [".", "n_queens_gen", "max_clique_gen", "random_graph_gen", "sudoku_gen"]
default-members = ["."]

[workspace.package]
edition = "2021"
authors = ["Tim Beurskens <timbeurskens.97@gmail.com>"]

[package]
name = "rsbdd"
description = "A BDD-based SAT solver"
version = "0.12.0"
edition.workspace = true
authors.workspace = true

[dependencies]
dot.workspace = true
itertools.workspace = true
lazy_static.workspace = true
rand.workspace = true
rustc-hash.workspace = true
clap.workspace = true
csv.workspace = true
regex.workspace = true
rayon.workspace = true
argfile.workspace = true
wild.workspace = true
anyhow.workspace = true

[dev-dependencies]
glob.workspace = true
pretty_assertions.workspace = true

[workspace.dependencies]
dot = "0.1"
itertools = "0.11"
lazy_static = "1.4"
rand = "0.8"
rustc-hash = "1.1"
clap = { version = "4.4", features = ["derive", "env", "wrap_help", "usage"] }
csv = "1.3"
regex = "1.9"
glob = "0.3"
pretty_assertions = "1.4"
anyhow = "1.0"
rayon = "1.8"
argfile = "0.1"
wild = "2.2"
