[package]
name = "macro-syntax"
description = "Macros for construction BDD expressions"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rsbdd = { path = "../" }

# [lib]
# proc-macro = true